--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,4 @@
-rjsquire@gmail.com
+# This is a comment. Lines starting with # are ignored.
+
+# Default owner for all files in the repository
+* rjsquire
